# peeler

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: camera.py  constants.py  dictionary.py  display.py  grid.py  main.py  ocr.py  pool.py  solver.py  swap.py
tests/: conftest.py  test_bugfixes.py  test_ocr.py  test_swap.py
web/: app.py
web/templates/: index.html
