[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "banagrams"
version = "0.1.0"
description = "Bananagrams solver — camera capture, letter recognition, crossword grid builder"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "opencv-python>=4.8",
    "flask>=3.0",
]

[project.scripts]
banagrams = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
